5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1712_2508.log
== TEST (2019-05-13 13:50:21) 
-- CODE:
from math import *
k = float(input("numero natural: "))
soma = 0      #variavel acumuladora
i = 0         #variavel contadora
while (i < k):
	soma = soma + 4 / (2*i)x(3*i)x(4*i)
	i = i +1
print(round(soma,8))

-- ERROR:
File "XXXX", line 6
    soma = soma + 4 / (2*i)x(3*i)x(4*i)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:59:59) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e=e+3
	else:
		e = e +(aux +(4/d *(d+1)*(d+2)))
		

-- ERROR:
File "XXXX", line 6
    soma = soma + 4 / (2*i)x(3*i)x(4*i)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:03:33) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e=e+3
	else:
		e = e +(aux +(4/d *(d+1)*(d+2)))
	
	if (aux==1):
		aux = -1
	else:
		aux = 1
	i = i +1
	d= d+2
print(round(e,8))
		

-- OUTPUT:
139.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:04:26) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e = e+3
	else:
		e = e +(aux *(4/(d *(d+1)*(d+2))))
	
	if (aux==1):
		aux = -1
	else:
		aux = 1
	i = i +1
	d= d+2
print(round(e,8))
		

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:04:34) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e = e+3
	else:
		e = e +(aux *(4/(d *(d+1)*(d+2))))
	
	if (aux==1):
		aux = -1
	else:
		aux = 1
	i = i +1
	d= d+2
print(round(e,8))
		

-- EXECUTION TIME:
0.246457
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:09:01) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e=e+3
	else:
		e = e +(aux +(4/d *(d+1)*(d+2)))
		

-- EXECUTION TIME:
474.83
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:47:52) 
-- CODE:
from math import *
k = float(input("numero natural: "))

d = 0      #variavel acumuladora
i = 0         #variavel contadora
e= 0
aux = -1

while (i < k):
	if(i==0):
		e = e+3
	else:
		e = e +(aux *(4/(d *(d+1)*(d+2))))
	
	if (aux==1):
		aux = -1
	else:
		aux = 1
	i = i +1
	d= d+2
print(round(e,8))
		

-- EXECUTION TIME:
0.203613
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
